# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
2021/: day-01.py  day-02.py  day-04.py  day-07.py
2023/day-01/: part-1.py
2023/day-02/: main.py
2023/day-03/: main.py  test.txt
golang/: README.md  go.mod  go.sum  main.go
golang/cmd/: scaffold.go
golang/hashset/: hashset.go  hashset_test.go
golang/helpers/: logging.go
golang/scaffolding/templates/: solution.go.tmpl  solution_test.go.tmpl
golang/stack/: stack.go
golang/y2022/d01/: solution.go  solution_test.go
golang/y2022/d02/: solution.go  solution_test.go
golang/y2022/d03/: solution.go  solution_test.go
golang/y2022/d04/: solution.go  solution_test.go
golang/y2022/d05/: solution.go  solution_test.go
golang/y2022/d06/: solution.go  solution_test.go
golang/y2022/d09/: solution.go  solution_test.go
python/: pyproject.toml
python/y2021/: day-02.py  day-14.py
